2002-07-06  Martin Blom  <martin@blom.org>

	* ahi.device: Removed checks for unused (since v5) speed-up flags
	(surround, echo and clipping).

2002-07-01  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 4.11.

	* emu10kx.audio: Set all active AC97 inputs to 0 dB at startup.

2002-05-28  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 4.10.

2002-05-25  Martin Blom  <martin@blom.org>

	* emu10kx.audio: Fixed the low PCM volume by using the full
	digital dynamic range. Set the default analog PCM mixer to 0 dB
	(was +6 dB).

2002-05-13  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 4.9.

	* emu10kx.audio: Reordered the recording sources so the "Mixer"
	comes first (ProStation Audio workaround).

	* emu10kx.audio: The microphone was unmuted by accident when the
	playback was stopped.

2002-05-12  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 4.8.

	* emu10kx.audio: Added code to handle recording and the selection
	of input sources.

2002-05-11  Martin Blom  <martin@blom.org>

	* AHI-Handler: Imported into CVS.

	* Examples: Added all developer examples to the CVS repository.

2002-03-17  Martin Blom  <martin@blom.org>

	* Released AHI preferences 5.5.

	* AHI: Disabled unused advanced options (anti-click time when
	using AHI v4, echo, surround and master volume when using AHI v5).

2002-02-27  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 4.6.

	* emu10kx.audio: Playback works. AC97 analog mixer initialized to
	reasonable defaults. I made it in time for AmiGBG 2002! :-)

2002-02-24  Martin Blom  <martin@blom.org>

	* Released AHI preferences 5.4.

	* AHI: Increased driver info buffers from 32 to 64 characters.

2002-02-15  Martin Blom  <martin@blom.org>

	* emu10kx.audio: Initial check-in. A header file is a good start,
	no?
	
2002-02-09  Martin Blom  <martin@blom.org>

	* toccata.audio: The CPU load check now also includes the
	PlayerFunc.

2002-01-20  Martin Blom  <martin@blom.org>
